Se traduce logout toast

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -403,6 +403,10 @@
                     "alternativeAction": "Don't have an account? Sign up"
                 }
             },
+            "logout": {
+                "success": "See you soon! 💸",
+                "error": "Logout error"
+            },
             "register": {
                 "title": "Create Account",
                 "subtitle": "Join us and start managing your finances",
