--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1124,8 +1124,9 @@
                     "categoryName": "Nombre de la categoría",
                     "categoryNameRequired": "El nombre de la categoría es requerido",
                     "color": "Color",
-                    "showTransactions": "Mostrar movimientos de {{year}}",
-                    "hideTransactions": "Ocultar movimientos de {{year}}"
+                    "history": "Historial",
+                    "showTransactions": "Mostrar",
+                    "hideTransactions": "Ocultar"
                 },
                 "delete": {
                     "title": "Delete Category",
