--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1126,7 +1126,10 @@
                     "color": "Color",
                     "history": "Historial",
                     "showTransactions": "Mostrar",
-                    "hideTransactions": "Ocultar"
+                    "hideTransactions": "Ocultar",
+                    "searchPlaceholder": "Buscar movimientos...",
+                    "noSearchResults": "No se encontraron movimientos",
+                    "tryDifferentSearch": "Intenta con otros términos de búsqueda"
                 },
                 "delete": {
                     "title": "Delete Category",
