Cambio de texto "more" en DashboardNav en movil

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -729,7 +729,7 @@
             "logout": "Log out",
             "noData": "No data available",
             "retry": "Retry",
-            "more": "More",
+            "more": "View more",
             "colors": {
                 "background": "Background color",
                 "text": "Text color"
