--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -729,7 +729,7 @@
             "logout": "Cerrar sesión",
             "noData": "No hay datos disponibles",
             "retry": "Reintentar",
-            "more": "Más",
+            "more": "Ver más",
             "colors": {
                 "background": "Color de fondo",
                 "text": "Color de texto"
