--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -852,106 +852,6 @@
                 "selectCategory": "Por favor, selecciona al menos una categoría para continuar"
             }
         },
-        "notifications": {
-            "title": "Notificaciones",
-            "settings": "Configuración de notificaciones",
-            "markAllAsRead": "Marcar todo como leído",
-            "unread": "No leída",
-            "empty": {
-                "title": "No tienes notificaciones",
-                "description": "Cuando recibas notificaciones, aparecerán aquí."
-            },
-            "filters": {
-                "all": "Todas",
-                "payment_reminder": "Recordatorios",
-                "achievement": "Logros",
-                "goal_progress": "Metas",
-                "tip": "Consejos",
-                "system": "Sistema",
-                "announcement": "Anuncios"
-            },
-            "types": {
-                "payment_reminder": "Recordatorio",
-                "achievement": "Logro",
-                "goal_progress": "Meta",
-                "tip": "Consejo",
-                "system": "Sistema",
-                "announcement": "Anuncio"
-            },
-            "actions": {
-                "markAsRead": "Marcar como leída",
-                "archive": "Archivar",
-                "delete": "Eliminar"
-            },
-            "success": {
-                "markedAsRead": "Notificación marcada como leída",
-                "markedAllAsRead": "Todas las notificaciones marcadas como leídas",
-                "archived": "Notificación archivada",
-                "deleted": "Notificación eliminada"
-            },
-            "errors": {
-                "loadingError": "Error al cargar las notificaciones",
-                "markAsReadError": "Error al marcar como leída",
-                "markAllAsReadError": "Error al marcar todas como leídas",
-                "archiveError": "Error al archivar la notificación",
-                "deleteError": "Error al eliminar la notificación"
-            },
-            "editor": {
-                "title": "Editor de Notificaciones",
-                "submit": "Enviar Notificación",
-                "success": "Notificación enviada correctamente",
-                "error": "Error al enviar la notificación",
-                "sending": "Enviando...",
-                "preview": "Vista previa",
-                "previewTitle": "Vista previa de la notificación",
-                "previewInfo": "Así es como aparecerá tu notificación a los destinatarios",
-                "previewNoTitle": "Sin título",
-                "previewNoMessage": "Sin mensaje",
-                "previewSentNow": "Ahora mismo",
-                "previewTargetAudience": "Destinatarios",
-                "previewScheduledFor": "Programada para",
-                "fields": {
-                    "type": {
-                        "label": "Tipo de notificación"
-                    },
-                    "targetAudience": {
-                        "label": "Destinatarios",
-                        "options": {
-                            "all": "Todos los usuarios",
-                            "free": "Usuarios gratuitos",
-                            "paid": "Usuarios de pago",
-                            "specific": "Usuarios específicos"
-                        }
-                    },
-                    "specificUsers": {
-                        "label": "IDs de usuarios",
-                        "helper": "Introduce los IDs de usuario separados por comas"
-                    },
-                    "title": {
-                        "label": "Título"
-                    },
-                    "message": {
-                        "label": "Mensaje",
-                        "helper": "Breve descripción que aparecerá en la notificación"
-                    },
-                    "content": {
-                        "label": "Contenido HTML",
-                        "helper": "Contenido detallado en formato HTML (opcional)"
-                    },
-                    "scheduledAt": {
-                        "label": "Programar envío",
-                        "helper": "Fecha y hora para enviar la notificación (opcional)"
-                    }
-                },
-                "errors": {
-                    "typeRequired": "El tipo de notificación es obligatorio",
-                    "targetRequired": "Debes seleccionar los destinatarios",
-                    "specificUsersRequired": "Debes especificar al menos un ID de usuario",
-                    "titleRequired": "El título es obligatorio",
-                    "messageRequired": "El mensaje es obligatorio"
-                }
-            }
-        },
         "settings": {
             "userSettings": {
                 "title": "Configuración de usuario",
@@ -1033,26 +933,6 @@
                 "deleteAccountSuccess": "Cuenta eliminada correctamente",
                 "deleteAccountError": "Error al eliminar la cuenta",
                 "username": "Nombre de usuario"
-            },
-            "notifications": {
-                "title": "Preferencias de notificaciones",
-                "inApp": {
-                    "title": "Notificaciones en la aplicación",
-                    "description": "Configura cómo quieres recibir notificaciones dentro de la aplicación.",
-                    "enable": "Activar notificaciones en la aplicación"
-                },
-                "email": {
-                    "title": "Notificaciones por email",
-                    "description": "Configura qué notificaciones quieres recibir por correo electrónico.",
-                    "enable": "Activar notificaciones por email"
-                },
-                "success": {
-                    "saved": "Preferencias de notificaciones guardadas correctamente"
-                },
-                "errors": {
-                    "loadingError": "Error al cargar las preferencias de notificaciones",
-                    "savingError": "Error al guardar las preferencias de notificaciones"
-                }
             }
         },
         "dashhome": {
@@ -1268,7 +1148,8 @@
                     "weekly": "Semanal",
                     "monthly": "Mensual",
                     "yearly": "Anual",
-                    "recurrenceDates": "Fechas de recurrencia"
+                    "recurrenceDates": "Fechas de recurrencia",
+                    "andMoreDates": "y más"
                 },
                 "placeholders": {
                     "description": "Ingrese descripción",
