feat/Mejora de UI en CategoryForm
+Añadimos income y expense de ese año en esa category

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -711,6 +711,8 @@
             "disable_currency_amount": "Hide balances"
         },
         "common": {
+            "income": "Income",
+            "expenses": "Expense",
             "understood": "Understood",
             "year": "Year",
             "month": "Month",
